--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "react_ess",
+  "name": "webpack-hotreload-boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/main.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p",
-    "watch": "webpack --watch",
-    "server": "webpack --watch & webpack-dev-server --hot --inline"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "clean-webpack-plugin": "^0.1.18",
+    "html-webpack-plugin": "^2.30.1"
+  },
   "devDependencies": {
     "webpack": "^3.11.0"
-  },
-  "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "uglifyjs-webpack-plugin": "^1.1.8"
   }
 }
