Add React.JS with stub from create-react-app, add production mode, many fixed dependenses, add yarn

--- a/package.json
+++ b/package.json
@@ -1,27 +1,55 @@
 {
   "name": "webpack-hotreload-boilerplate",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "version": "1.0.1",
+  "description": "Webpack boilerplate with hotreload",
+  "main": "index.js",
   "scripts": {
+    "build": "NODE_ENV='production' webpack -p",
+    "dev-build": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "webpack-dev-server"
   },
-  "author": "",
+  "author": "Igor V. Kruglenko",
   "license": "ISC",
   "dependencies": {
-    "clean-webpack-plugin": "^0.1.18",
-    "html-webpack-plugin": "^2.30.1"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
+    "@babel/preset-react": "^7.0.0-beta.40",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.2.2",
     "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "bluebird": "^3.5.1",
+    "clean-webpack-plugin": "^0.1.18",
+    "css-loader": "^0.28.9",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.8",
+    "html-webpack-plugin": "^2.30.1",
+    "i": "^0.3.6",
+    "node-less": "^1.0.0",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.11.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fetfrum/webpack-boilerplate.git"
+  },
+  "keywords": [
+    "webpack",
+    "react",
+    "babel"
+  ],
+  "bugs": {
+    "url": "https://github.com/fetfrum/webpack-boilerplate/issues"
+  },
+  "homepage": "https://github.com/fetfrum/webpack-boilerplate#readme"
 }
