--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "Igor V. Kruglenko",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.2",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
@@ -37,7 +39,8 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.1.8",
-    "webpack": "^3.11.0"
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "repository": {
     "type": "git",
